[gd_scene load_steps=6 format=3 uid="uid://drrrm4k7b2br7"]

[ext_resource type="Texture2D" uid="uid://c1p6uyxgfdnf3" path="res://assets/sprites/sheets/SwordFighter/SwordCharacterSelect.png" id="1_ix0ke"]
[ext_resource type="Script" path="res://scenes/ui/CSS/char_buttons/CSS_Button_Sword.gd" id="2_1xwpb"]
[ext_resource type="Texture2D" uid="uid://b4g2f4rw843nq" path="res://assets/sprites/sheets/SwordFighter/SwordCharacterSelected.png" id="2_kjxhh"]

[sub_resource type="SystemFont" id="SystemFont_u5hbt"]
subpixel_positioning = 0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_1yaxc"]
size = Vector2(224, 128)

[node name="Character" type="TextureButton" groups=["Char_Select"]]
custom_minimum_size = Vector2(224, 128)
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 4.0
offset_right = -1052.0
offset_bottom = -592.0
grow_horizontal = 2
grow_vertical = 2
texture_normal = ExtResource("1_ix0ke")
texture_pressed = ExtResource("2_kjxhh")
ignore_texture_size = true
stretch_mode = 5
script = ExtResource("2_1xwpb")
normal_texture = ExtResource("1_ix0ke")
pressed_texture = ExtResource("2_kjxhh")

[node name="ColorRect" type="ColorRect" parent="."]
show_behind_parent = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(1, 0.392157, 0.27451, 1)

[node name="Name" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -46.0
offset_right = 46.0
offset_bottom = 23.0
grow_horizontal = 2
theme_override_constants/outline_size = 4
theme_override_constants/shadow_outline_size = 5
theme_override_fonts/font = SubResource("SystemFont_u5hbt")
theme_override_font_sizes/font_size = 18
text = "Swordsman"
horizontal_alignment = 1
vertical_alignment = 1

[node name="CharacterArea" type="Area2D" parent="."]
position = Vector2(112, 64)
collision_layer = 131072
collision_mask = 262144

[node name="CollisionShape2D" type="CollisionShape2D" parent="CharacterArea"]
shape = SubResource("RectangleShape2D_1yaxc")

[node name="Point" type="Marker2D" parent="."]
position = Vector2(112, 64)

[connection signal="button_down" from="." to="." method="_on_Character_button_down"]
[connection signal="button_up" from="." to="." method="_on_Character_button_up"]
[connection signal="area_entered" from="CharacterArea" to="." method="_on_Area2D_area_entered"]
[connection signal="area_exited" from="CharacterArea" to="." method="_on_Area2D_area_exited"]
